# ORB_SLAM3

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: ghcr.yml
docker/: build-helpers  build-orbslam3  orbslam3-entrypoint
docs/: python_client.md  thin_python_wrapper.md  trajectory_pointcloud_and_localization.md
include/: System.h  Tracking.h
plans/: next_agent_prompt.md  stereo_inertial_atlas_observations.md  thin_python_wrapper.md
pyorbslam3/: __init__.py  api.py  artifacts.py  cli.py  docker.py  errors.py
src/: System.cc  Tracking.cc
tests/: test_api.py  test_artifacts.py  test_docker.py
tools/: rgbd_keyframes_to_ply.cpp  scene_atlas_export.cpp  sequence_observation_export.cpp
