[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "orb-slam3"
version = "0.1.0"
description = "uv-installable Docker runner for ORB-SLAM3"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "ORB-SLAM3 contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8",
]
viewer = [
  "numpy>=1.24",
  "open3d>=0.18",
]

[project.urls]
Homepage = "https://github.com/Velythyl/ORB_SLAM3"
Repository = "https://github.com/Velythyl/ORB_SLAM3"

[project.scripts]
orb-slam3 = "pyorbslam3.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pyorbslam3"]

[tool.hatch.build.targets.sdist]
include = [
  "LICENSE",
  "README.md",
  "docs/python_client.md",
  "pyproject.toml",
  "pyorbslam3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
